added external file for countries and flags adn added footer html

--- a/index.html
+++ b/index.html
@@ -22,15 +22,44 @@
           <p></p>
         </header>
 <div id="main" class="main">
-  <div id="map"></div>
-</div>
 <button onclick="showBucketList()">Show Bucket List</button>
 <button onclick="showCurrency()">Show Currency Converter</button>
+<button onclick="showCalendar()">Show Calendar</button><br><br>
+<div id="map"></div>
+</div>
+
+ <!-- footer section -->
+ <footer class="footerContainer">	
+  <ul id="social-networks">
+        <li>
+          <a class="socials" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page, opens in a new tab">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a class="socials" href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page, opens in a new tab">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a class="socials" href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our X page, opens in a new tab">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+        </li>
+        <li>
+         <a class="socials" href="mailto:adelle.king@outlook.com" target="_blank" rel="noopener" aria-label="Send us an Email, opens in a new tab">
+            <i class="fa-regular fa-envelope"></i>
+          </a>
+        </li>
+      </ul>
+</footer>
 
 
 
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo--uRx7qJcf4H-a5GJf9BcruuY6KEEIM&libraries=places&callback=initMap">
 </script>
 <script src="assets/js/main.js"></script>
+<script src="assets/js/countries.js"></script>
+
 </body>
 </html>
