--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
 <body>
     <header>
-        <div class="hero-image">
+      <video width="100%" autoplay>
+        <source src="assets/images/video1.mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+      </video>
           <div class="hero-text">
             <h4>Lets Travel</h4>
           </div>
-        </div>
-          <p></p>
         </header>
 <div id="main" class="main">
 <button onclick="showBucketList()">Show Bucket List</button>
