trying to fix js functionality for currency converter

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
 <body>
     <header>
-      <video width="100%" autoplay>
+      <video width="100%">
         <source src="assets/images/video1.mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
       </video>
           <div class="hero-text">
-            <h4>Lets Travel</h4>
+            <h4>To Travel is to Live</h4>
+            
+            
           </div>
         </header>
 <div id="main" class="main">
@@ -60,7 +62,7 @@
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo--uRx7qJcf4H-a5GJf9BcruuY6KEEIM&libraries=places&callback=initMap">
 </script>
 <script src="assets/js/main.js"></script>
-<script src="assets/js/countries.js"></script>
+
 
 </body>
 </html>
