--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 
 <body>
     <header>
-      <!--<video width="100%">
-        <source src="assets/images/video1.mp4" type="video/mp4">
+      <video width="100%"  autoplay muted>
+        <source src="assets/images/video.mp4" type="video/mp4" >
                 Your browser does not support HTML5 video.
-      </video>-->
+      </video>
       <div class="hero-img"></div>
           <div class="hero-text">
-            <h4>To Travel is to Live</h4>
-            
-            
+            <h4>To Travel is to Live</h4>       
           </div>
         </header>
 <div id="main" class="main">
@@ -30,7 +28,7 @@
 <button onclick="showCurrency()">Show Currency Converter</button>
 <button onclick="showCalendar()">Show Calendar</button><br><br>
 
-<div id="hidden"><a href="index.html" class="button">Back</a>  
+<div id="hidden"><a href="index.html" >Back</a>  
   <div class="wrapper">
   <h5 class="currency">Currency Converter</h5>
   <form action="#" >
@@ -91,12 +89,12 @@
 </footer>
 
 
-
+<script src="assets/js/main.js"></script>
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo--uRx7qJcf4H-a5GJf9BcruuY6KEEIM&libraries=places&callback=initMap">
 </script>
 <script src="assets/js/countries.js"></script>
 <script src="assets/js/script.js"></script>
-<script src="assets/js/main.js"></script>
+
 
 
 </body>
