--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Montserrat:wght@200&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <title>Lets Travel</title>
 </head>
-<body>
+
 
 <body>
     <header>
-      <video width="100%"  autoplay muted>
+      <video class="video" autoplay muted>
         <source src="assets/images/video.mp4" type="video/mp4" >
                 Your browser does not support HTML5 video.
       </video>
