final elements of readme completed. Advised to remove the jest testing element.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="form1">    
 <form class="formChecklist">
     <input type="text" id="inputText" placeholder="Your To-Do actions" required>
-  <button class="bucketButton" type="button" onclick="createCheckbox()">add to list</button> 
+  <button id="bucketButton" class="strikethrough" type="button" onclick="createCheckbox()">add to list</button> 
 </form> 
   </div>
 
