added comments to the JS files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
         </header>
 <div id="main" class="main"><!-- these are the buttons which house the toggle functions-->
-<button class="navButton" onclick="showBucketList()">Holiday Checklist</button>
+<button class="navButton" onclick="showHolidayList()">Holiday Checklist</button>
 <button class="navButton" onclick="showCurrency()">Currency Converter</button>
 <!--when the above buttons are clicked this HTML will be displayed.-->
 <div id="hidden"><a href="index.html" >Back</a>  
